Fix translucency on Firefox

--- a/war/src/main/less/modules/app-bar.less
+++ b/war/src/main/less/modules/app-bar.less
@@ -54,6 +54,10 @@
       background: var(--background);
       mask-image: linear-gradient(black 70%, transparent);
       opacity: 0.55;
+
+      @supports not (backdrop-filter: blur(15px)) {
+        opacity: 1;
+      }
     }
 
     &::after {
